# dobby

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/api/: chat.ts  client.ts  threads.ts
client/src/hooks/: useChat.ts  useThreads.ts
client/src/styles/: globals.css
client/src/utils/: markdown.ts
project/: env.py
project/versions/: 79081dc21b8b_memories_table.py  a3f92c1d4e87_add_embedding_to_memories.py  c4d8a2b6e1f5_goals_table.py  e2f4a8b6c9d1_summaries_table.py
prototypes/: chat.html
scripts/: get_google_refresh_token.py
src/: main.py
src/agent/: checkpointer.py  context.py  graph.py  nodes.py  prompts.py  state.py
src/api/: chat.py  models.py
src/common/: models.py
src/config/: settings.py
src/goals/: models.py  repository.py  service.py
src/integrations/: exceptions.py  homeassistant.py  postgres.py
src/integrations/diet/: __init__.py  dietapp.py  exceptions.py  models.py
src/integrations/finances/: __init__.py  exceptions.py  financesapp.py  models.py
src/llm/: embeddings.py  openai.py
src/memory/: database.py  extractor.py  models.py  repository.py  service.py
src/service/: chat_service.py  thread_service.py
src/summaries/: email.py  models.py  repository.py  scheduler.py  service.py
src/tools/: body_metrics.py  calendar.py  can_i_afford.py  daily_food_log.py  finances.py  goals.py  homeassistant.py  memory.py  registry.py
tests/: test_dietapp.py
tests/integrations/: test_financesapp.py
(+32 files in other folders)
