[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "openai>=2.43.0",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
