[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10.0",
    "resend>=2.0.0",
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=2.0.13",
    "openai>=2.43.0",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.4.0",
]
